<resources>
    <string name="app_name">ToDoTitans</string>
    <string name="team_logo"></string>
    <string name="sign_up">Sign Up</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back_to_sign_in">Log In</string>
    <string name="reveal_password">Reveal Password</string>

    <string name="remove_task" />
    <string name="add_task" />
    <string name="settings_menu">Settings Menu</string>


    <string name="select">Select Item</string>
    <string name="back_button">Back Button</string>
    <string name="security_question">Security Question</string>
    <string name="what_was_the_name_of_your_first_school">What was the name of your first School?</string>


    <string-array name="priority">

        <item>Low</item>

        <item>Medium</item>

        <item>High</item>

    </string-array>
</resources>