<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Team Logo -->
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="150dp"
            android:layout_height="103dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/team_logo"
            android:src="@drawable/team_logo" />

        <!-- Forgot Password Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Description Text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            android:textAlignment="center" />

        <!-- Email Input Field -->
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputSecurityQuestion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/security_question"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <!-- Reset Password Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/reveal_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/buttonColor"
            app:cornerRadius="8sp" />

        <!-- Back to Login Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/buttonColor"
                app:cornerRadius="8sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBackToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/back_to_sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/buttonColor"
                app:cornerRadius="8sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
